[package]
name = "blis-sys2"
version = "0.2.2"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
license = "MIT/Apache-2.0"
description = "FFI bindings for BLIS library (depends on blis-src)"
repository = "https://github.com/cassiersg/blis-sys2"
homepage = "https://github.com/cassiersg/blis-sys2"
keywords = ["blas", "blis"]
categories = ["science"]
documentation = "http://docs.rs/blis-sys2"
readme = "README.md"

[dependencies]
blis-src = { version = "0.2.1", default-features = false }

[build-dependencies]
bindgen = "0.69"
blis-src = { version = "0.2.1", default-features = false, features = [
    "serial",
] }
